# TrueTrack

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  LICENSE  README.md  app.py  audit_report.md  debug_server.py  debug_static_paths.py  docker-compose.yml  ingest.py  install.ps1  install.sh  install_core.ps1  install_core.sh  jobs.db  pyproject.toml  run.ps1  run.sh  verify_db_invariant.py
Docs/: job_model.md  pipeline_states.md  storage_rules.md
api/: main.py  models.py  store.py
api/routes/: settings.py
assets/icon/: truetrack.icns
backend/api/: main.py
backend/cli/: phases.py  state_map.py
backend/core/: ingest.py  job.py  scoring.py
backend/infra/: sqlite_job_store.py
backend/utils/: logging.py  paths.py  tagging.py
backend/worker/: main.py
cli/: doctor.py  main.py  renderer.py  summary.py
core/: app_config.py  config.py  job.py  pipeline.py  pipeline_factory.py  scoring.py  states.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/jobs/: page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/lib/: api.ts
infra/: job_store.py  sqlite_job_store.py  store.py
install/: install_unix.sh  install_windows.ps1  launch_installer.cmd
install/common/: checks.ps1  checks.sh  env_writer.ps1  env_writer.sh  integration.ps1  integration.sh  logging.sh
tests/: verify_fixes.py
utils/: metadata.py  paths.py  storage.py  tagging.py
worker/: main.py  runtime.py
