[project]
name = "music-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "mutagen>=1.47.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "yt-dlp>=2025.12.8",
    "ytmusicapi>=1.11.4",
]

[project.scripts]
music = "cli.main:main"

