[project]
name = "truetrack"
version = "3.0.0"
description = "A local-first music pipeline for intent resolution, metadata correctness, and organized archival."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Vicky" }
]

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "yt-dlp>=2025.12.8",
    "ytmusicapi>=1.11.4",
    "mutagen>=1.47.0",
    "requests>=2.32.5",
    "httpx>=0.28.1",
]

[project.scripts]
truetrack = "cli.main:main"
